--- a/test.html
+++ b/test.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
+<!-- <script src="./jquey.3.7.1.js"></script> -->
+<style>
+  
+  .form-check-label:hover {
+  
+  cursor : pointer;
+  font-size: 15px;  
+  }
+  .form-check{ 
+  margin-top: 14px;
+  } 
+</style>
+
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <form action="#" method="post">
-    <div class="cal_box">
-      <div class="part1">
-        <div class="bill_input">
-          <label for="custom_tip">Select Tip %</label>
-          <div class="tip_btn_group">
-            <input type="checkbox" name="tip" id="tip5" value="5" />
-            <label class="btn_box" for="tip5">5%</label>
-            <input type="checkbox" name="tip" id="tip10" value="10" />
-            <label class="btn_box" for="tip10">10%</label>
-            <input type="checkbox" name="tip" id="tip15" value="15" />
-            <label class="btn_box" for="tip15">15%</label>
-            <input type="checkbox" name="tip" id="tip25" value="25" />
-            <label class="btn_box" for="tip25">25%</label>
-            <input type="checkbox" name="tip" id="tip50" value="50" />
-            <label class="btn_box" for="tip50">50%</label>
-            <input type="text" name="custom_tip" id="tip" value="" placeholder="Custom" />
-          </div>
-        </div>
+  <form id="dfgf" action="">
+
+    <div id="panel0000000001">
+
+      <div class="form-check" dir="rtl">
+        <input class="form-check-input" type="checkbox" data-def='0' value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+      هزینه مکالمه بخشنامه ای      </label>
       </div>
     </div>
+
+    <div id="panel0000000002">
+
+      <div class="form-check" id="ok" dir="rtl">
+        <input id="btn" class="form-check-input" type="test">
+        <label class="form-check-label" for="flexCheckDefault">
+
+      </div>
+    </div>
+
   </form>
 </body>
 </html>
 <script>
-$(function() {
-  $(".tip_btn_group input[type='checkbox']").change(function(event) {
-    var $self = $(this);
-    var tip;
-    $(".tip_btn_group input[type='checkbox']").not($self).prop("checked", false);
-    if ($(".tip_btn_group input[type='checkbox']:checked").length == 0) {
-      tip = 0;
-    } else {
-      tip = parseInt($self.val());
-    }
-    console.log(tip);
-  });
+
+
+// $('#btn').on('input', function() {
+//   alert();
+//   $(this).val($(this).val().replace(/[^a-z0-9]/gi, ''));
+// });
+$('#btn').on('input', function() {
+ // alert();
+  var c = this.selectionStart,
+      r = /[^0-9]/gi,
+      v = $(this).val();
+  if(r.test(v)) {
+    $(this).val(v.replace(r, ''));
+    c--;
+  }
+  this.setSelectionRange(c, c);
 });
+
+
 </script>
