--- a/test.html
+++ b/test.html
@@ -5,46 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
-<!-- <script src="./jquey.3.7.1.js"></script> -->
-<style>
-  
-  .form-check-label:hover {
-  
-  cursor : pointer;
-  font-size: 15px;  
-  }
-  .form-check{ 
-  margin-top: 14px;
-  } 
-</style>
-
 <body>
-  <h1><input type="yeets" name="_mdjm_event_cost" id="yett" class="mdjm-input-currency required" readonly="readonly" value="" placeholder="Totaal €0.00" style="
-    height: 100px;
-    width: 150px;
-    margin-top: -40px;
-    color: black;
-    font-weight: bold;"/>
-  </h1>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<table id="data">
+    <tr>
+        <th>No</th>
+        <th>Description</th>
+        <th>Amount</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td><input type="text" name="descrpt"></td>
+        <td><input type="number" name="amount"></td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td><input type="text" name="descrpt"></td>
+        <td><input type="number" name="amount"></td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td><input type="text" name="descrpt"></td>
+        <td><input type="number" name="amount"></td>
+    </tr>
+</table>
 
-  <select name="iFenceCorners" id="FenceCorners" class="AutosubmitCalculator" tabindex="3">
-    <option value="0" selected="selected" data-price="00.00">Geen hoeken</option>
-    <option value="1" data-price="20.00">1 hoek</option><option value="2" data-price="40.00">2 hoeken</option><option value="3" data-price="60.00">3 hoeken</option><option value="4" data-price="80.00">4 hoeken</option>
-    <option value="5" data-price="100.00">5 hoeken</option><option value="6" data-price="120.00">6 hoeken</option><option value="7" data-price="140.00">7 hoeken</option><option value="8" data-price="160.00">8 hoeken</option>
-    <option value="9" data-price="180.00">9 hoeken</option><option value="10" data-price="200.00">10 hoeken</option>
-  </select>
+<div>
+    <h5>Total Amount :<input type="number" name="total_amount" readonly></h5>
+</div>
 </body>
 </html>
 <script>
 
+$(document).ready(function () {
+   $('input[name="total_amount"]').val(calcSum());
+       $('input[name="amount"]').change(function () { 
+         $('input[name="total_amount"]').val(calcSum());
+       });
+   });
 
-base = 0;
-$("#FenceCorners").on("change", function () {
-    var total = (base * 100 + $(this).find(":selected").data("price") * 100) / 100;
-    $("#yett").val('Total €' + total.toFixed(2).replace(/\./g, ','));
-});
-
+function calcSum() {
+  var tamount = 0;
+  $('input[name="amount"]').each(function() {
+    tamount += parseInt(($(this).val() ? $(this).val() : 0));
+  });
+  return tamount;
+}
 
 </script>
